--- a/platform/msvc/projects/cslang.vcxproj.filters
+++ b/platform/msvc/projects/cslang.vcxproj.filters
@@ -48,67 +48,67 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\include\vexc\Parser.h">
+    <ClInclude Include="..\..\..\include\cslang\Parser.h">
       <Filter>1.parser</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\vexc\Tokenizer.h">
+    <ClInclude Include="..\..\..\include\cslang\Tokenizer.h">
       <Filter>0.lexer</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\vexc\keyword.h">
+    <ClInclude Include="..\..\..\include\cslang\keyword.h">
       <Filter>util</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\vexc\Token.h">
+    <ClInclude Include="..\..\..\include\cslang\Token.h">
       <Filter>util</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\vexc\token_cfg.h">
+    <ClInclude Include="..\..\..\include\cslang\token_cfg.h">
       <Filter>util</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\vexc\AST.h">
+    <ClInclude Include="..\..\..\include\cslang\AST.h">
       <Filter>1.parser</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\vexc\op_cfg.h">
+    <ClInclude Include="..\..\..\include\cslang\op_cfg.h">
       <Filter>util</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\vexc\token_op_cfg.h">
+    <ClInclude Include="..\..\..\include\cslang\token_op_cfg.h">
       <Filter>util</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\vexc\grammer.h">
+    <ClInclude Include="..\..\..\include\cslang\grammer.h">
       <Filter>util</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\vexc\DumpAST.h">
+    <ClInclude Include="..\..\..\include\cslang\DumpAST.h">
       <Filter>1.parser</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\vexc\StringPool.h">
+    <ClInclude Include="..\..\..\include\cslang\StringPool.h">
       <Filter>util</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\vexc\StringHelper.h">
+    <ClInclude Include="..\..\..\include\cslang\StringHelper.h">
       <Filter>util</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\vexc\Declaration.h">
+    <ClInclude Include="..\..\..\include\cslang\Declaration.h">
       <Filter>1.parser\ast</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\vexc\Expression.h">
+    <ClInclude Include="..\..\..\include\cslang\Expression.h">
       <Filter>1.parser\ast</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\vexc\Statement.h">
+    <ClInclude Include="..\..\..\include\cslang\Statement.h">
       <Filter>1.parser\ast</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\vexc\Variant.h">
+    <ClInclude Include="..\..\..\include\cslang\Variant.h">
       <Filter>util</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\vexc\EvalAST.h">
+    <ClInclude Include="..\..\..\include\cslang\EvalAST.h">
       <Filter>3.eval</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\vexc\BuildInFuncs.h">
+    <ClInclude Include="..\..\..\include\cslang\BuildInFuncs.h">
       <Filter>3.eval</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\vexc\Type.h">
+    <ClInclude Include="..\..\..\include\cslang\Type.h">
       <Filter>base</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\vexc\Symbol.h">
+    <ClInclude Include="..\..\..\include\cslang\Symbol.h">
       <Filter>base</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\vexc\ExprCheck.h">
+    <ClInclude Include="..\..\..\include\cslang\ExprCheck.h">
       <Filter>2.semantic</Filter>
     </ClInclude>
   </ItemGroup>
